added unit tests

--- a/Simple.Api/appsettings.Development.json
+++ b/Simple.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SimpleDataDbContext": "Server=localhost,1434;Database=SimpleDataDbContext;User Id=sa;Password=Password@123;TrustServerCertificate=true"
   }
 }
