--- a/Simple.Api/appsettings.json
+++ b/Simple.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SimpleDataDbContext": "Server=localhost,1434;Database=SimpleDataDbContext;User Id=sa;Password=Password@123;TrustServerCertificate=true"
+  }
 }
